@@ -35,6 +35,11 @@ to develope Perl modules related to character encoding.</p>
   want to enable the module
   <a href="http://suika.fam.cx/www/markup/html/whatpm/Whatpm/Charset/DecodeHandle.html"><code>Whatpm::Charset::DecodeHandle</code></a>
   to decode <code>EUC-JP</code>-encoded text.</dd>
+
+<dt><a
+href="Encode-EUCJP1997OPENNEC-0.01.tar.gz"><code>Encode::EUCJP1997OPENNEC</code></a>
+(tar + gzip, 88ko)
+
 <dt><a href="Encode-ShiftJIS1997-0.01.tar.gz"><code>Encode::ShiftJIS1997</code></a>
 (tar + gzip, 45ko)</dt>
   <dd>It is necessary to install this Perl module if you
